--- a/src/sass/contacts.scss
+++ b/src/sass/contacts.scss
@@ -84,3 +84,13 @@
     }
     
 }
+
+.contacts__link:hover{
+    text-decoration: underline;
+    color: #283645;
+}
+
+.contacts__link:active{
+    text-decoration: none;
+    color: #cdcfd1;
+}
