--- a/src/sass/review.scss
+++ b/src/sass/review.scss
@@ -73,6 +73,7 @@
         order: 0;
         font-size: 18px;
         margin: 0;
+        min-height: 80px;
     }
 
     .review__author{
@@ -103,7 +104,7 @@
     .review__item{
         width: 720px;
         padding-top: 130px;
-        background-image: url(../img/quotes.png);
+        background-image: url(../img/quotes.webp);
         background-repeat: no-repeat;
         background-position: center 70px;
         order: 2;
@@ -111,12 +112,12 @@
 
     .button--prev{
         order: 1;
-        background-image: url(../img/left-arrow.png);
+        background-image: url(../img/left-arrow.webp);
     }
 
     .button--next{
         order: 3;
-        background-image: url(../img/right-arrow.png);
+        background-image: url(../img/right-arrow.webp);
     }
 
     .review__button{
@@ -129,4 +130,32 @@
        background-position: center;
        outline: none;
     }
+}
+
+
+.button--prev:hover{
+    background-image: url(../img/left-arrow-hover.webp);
+}
+
+.button--prev:active{
+    background-image: url(../img/left-arrow.webp);
+    opacity: 0.5;
+}
+
+
+.button--next:hover{
+    background-image: url(../img/right-arrow-hover.webp);
+}
+
+.button--next:active{
+    background-image: url(../img/right-arrow.webp);
+    opacity: 0.5;
+}
+
+.pagination__item:hover{
+    background-color: #7e868f;
+}
+
+.pagination__item:hover{
+    background-color: #e9ebec;
 }
