--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -40,3 +40,11 @@
         margin: 70px 7px;
     }
 }
+
+.social__link:hover{
+    border: 2px solid #283645;
+}
+
+.social__link:active{
+    opacity: 0.5;
+}
