--- a/src/sass/map.scss
+++ b/src/sass/map.scss
@@ -3,7 +3,7 @@
 }
 
 .map {
-    background: url(../img/bg-map-mobile@1x.png) no-repeat;
+    background: url(../img/bg-map-mobile.webp) no-repeat;
     position: relative;
     height: 219px;
     background-size: cover;
@@ -25,14 +25,14 @@
 
 @media (min-width:660px){
     .map {
-        background: url(../img/bg-map-desktop@1x.jpg) no-repeat;
+        background: url(../img/bg-map-desktop.webp) no-repeat;
         height: 375px;
     }
 }
 
 @media(min-width:1200px){
     .map {
-        background: url(../img/bg-map-desktop@1x.jpg) no-repeat;
+        background: url(../img/bg-map-desktop.webp) no-repeat;
         height: 500px;
         background-size: cover;
     }
