--- a/src/sass/page-header.scss
+++ b/src/sass/page-header.scss
@@ -1,20 +1,18 @@
 .page-header{
     display: flex;
     padding-bottom: 400px;
-    background-image: url(../img/iphone-hand-mobile@2x.png),
-                      url(../img/bg-back-mobile@2x.jpg);
+    background-image: url(../img/iphone-hand-mobile.webp),
+                      url(../img/bg-back-mobile.webp);
     background-repeat: no-repeat;
     background-size: 290px, cover;
     background-position: bottom center;
-    z-index: -1;
     position: relative;
-}
+} 
 
 .page-header__logo{
     position: absolute;
     top: 20px;
-    left: 20px;
-    z-index: 10;
+    left: 20px; 
 }
 
 .page-header__nav{
@@ -48,7 +46,6 @@
     color: #fff;
     text-decoration: none;
     font-size: 18px;
-    z-index: 1200;
 }
 
  //меню открыто
@@ -107,8 +104,8 @@
 
     .page-header{
         padding-bottom: 650px;
-        background-image: url(../img/iphone-hand-mobile@2x.png),
-                           url(../img/bg-back-mobile@2x.jpg);
+        background-image: url(../img/iphone-hand-mobile.webp),
+                          url(../img/bg-back-mobile.webp);
         background-repeat: no-repeat;
         background-size: 520px, cover;
         background-position-x: 86%, center;
@@ -178,7 +175,7 @@
 .page-header--photo{
     padding-bottom: 170px;
     // background-image: none;
-    background-image: url(../img/bg-back-mobile@2x.jpg);
+    background-image: url(../img/bg-back-mobile.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -189,3 +186,30 @@
         padding-bottom: 370px;
     }
 }
+
+@media (min-width:1200px){
+    .page-header--photo{
+        padding-bottom: 330px;
+    }
+
+    .page-main--photo{
+        background: #fff;
+    }
+}
+
+.page-header__logo-img:hover{
+   opacity: 0.8;
+}
+
+.page-header__logo-img:active{
+    opacity: 0.5;
+ }
+
+ .main-nav__link:hover{
+   color: #d22856;
+ }
+
+ .main-nav__link:active{
+    opacity: 0.3;
+    color: #fff;
+  }
