--- a/src/sass/users-photo.scss
+++ b/src/sass/users-photo.scss
@@ -12,8 +12,9 @@
     text-align: center;
     margin: 0;
     padding-bottom: 140px;
-    width: 220px;
-}
+    width: 220px; 
+    z-index: 10;
+} 
 
 .users-photo__text{
     font-size: 14px;
@@ -30,6 +31,10 @@
     padding-bottom: 20px;
 }
 
+.panorama{
+    position: relative;
+}
+
 .panorama__img{
     vertical-align: bottom;
     width: 100%;
@@ -43,7 +48,7 @@
     text-transform: uppercase;
     right:15%;
     color: #fff;
-    background-image: url(../img/pano.png);
+    background-image: url(../img/pano.webp);
     background-repeat: no-repeat;
     width: 140px;
     height: 35px;
@@ -86,6 +91,18 @@
     vertical-align: bottom;
 }
 
+.photo-info__like{
+    border: none;
+    background-image: url(../img/like.webp);
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 35px;
+    text-transform: uppercase;
+    color: #d22856;
+    font-size: 12px;
+    background-color: transparent;
+}
+
 @media(min-width:660px){
     .users-photo{
         margin-top: -260px;
@@ -103,8 +120,13 @@
         padding-bottom: 80px;
     }
 
+    .panorama{
+        width: 660px;
+    }
+
     .panorama:after{
-        right:25%;
+        top: 5%;
+        right:5%;
     }
 
     .panorama__description{
@@ -114,5 +136,69 @@
     .users-photo__wrp{
         display: flex;
         flex-direction: row;
+        width: 660px;
+        flex-wrap: wrap;
     }
 }
+
+@media (min-width:1200px){
+    .users-photo__text{
+        width: 600px ;
+    }
+
+    .panorama{
+        width: 1200px;
+    }
+
+    .photo-info{
+        width: 300px;
+        margin: 0;
+    }
+
+    .panorama__description{
+        width: 940px;
+        display: grid;
+        grid-template-columns: 4fr 1fr;
+        grid-template-rows: min-content 1fr;
+        row-gap: 15px;
+    }
+
+    .photo-info__author--panorama{
+        grid-row: 1/2;
+        grid-column: 1/2;
+        padding: 0;
+    }
+
+    .photo-info__like--panorama{
+        grid-row: 1/2;
+        grid-column: 2/3;
+    }
+
+    .photo-info__text--panorama{
+        grid-row: 2/3;
+        grid-column: 1/3;
+    }
+
+    .users-photo__wrp{
+        width: 940px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .photo-info__like{
+        border: none;
+        background-image: url(../img/like.webp);
+        background-repeat: no-repeat;
+        background-position: center right;
+        padding:0;
+        text-transform: uppercase;
+        color: #d22856;
+        font-size: 12px;
+        width: 100%;
+        text-align: start;
+    }
+    
+
+}
+
