--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,7 @@
 .page-header__logo-img--desktop,
 .description,
 .review__author-desk,
-.page-footer,
-.review__button{
+.page-footer{
     display: none;
 }
 
